--- a/plugin/module-main/pom.xml
+++ b/plugin/module-main/pom.xml
@@ -3,9 +3,16 @@
   <groupId>de.intranda.goobi.plugins.quartz</groupId>
   <artifactId>heris-main</artifactId>
   <version>1.0.0</version>
+  <name>Goobi workflow - Plugin Quartz HERIS</name>
+  <url>https://github.com/intranda/goobi-plugin-quartz-heris</url>
   <properties>
     <jar.name>plugin_intranda_quartz_heris</jar.name>
     <dest.folder>/opt/digiverso/goobi/plugins/GUI/</dest.folder>
+    <sonar.projectKey>intranda_goobi-plugin-import-bka-bda</sonar.projectKey>
+    <sonar.organization>intranda</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.java.source>11</sonar.java.source>
+    <sonar.java.target>11</sonar.java.target>
   </properties>
   <parent>
     <groupId>de.intranda.goobi.plugins.quartz</groupId>
@@ -26,8 +33,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <release>11</release>
+          <compilerArgument>-Xlint:deprecation</compilerArgument>
         </configuration>
       </plugin>
       <plugin>
@@ -96,10 +103,29 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.7</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <scm>
-    <url>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-sample.git</url>
-    <connection>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-sample.git</connection>
+    <url>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-quartz-heris.git</url>
+    <connection>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-quartz-heris.git</connection>
   </scm>
 </project>
