--- a/plugin/module-main/pom.xml
+++ b/plugin/module-main/pom.xml
@@ -8,11 +8,8 @@
   <properties>
     <jar.name>plugin_intranda_quartz_heris</jar.name>
     <dest.folder>/opt/digiverso/goobi/plugins/GUI/</dest.folder>
-    <sonar.projectKey>intranda_goobi-plugin-quartz-heris</sonar.projectKey>
-    <sonar.organization>intranda</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.java.source>11</sonar.java.source>
-    <sonar.java.target>11</sonar.java.target>
+    <!-- The Sonar basedir is one level up... -->
+    <sonar.projectBaseDir>..</sonar.projectBaseDir>
   </properties>
   <parent>
     <groupId>de.intranda.goobi.plugins.quartz</groupId>
