--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -7,6 +7,15 @@
   <properties>
     <goobi.version>23.01.2-SNAPSHOT</goobi.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <!-- Sonar -->
+    <sonar.projectKey>intranda_goobi-plugin-quartz-heris</sonar.projectKey>
+    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
+    <sonar.organization>intranda</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.java.source>11</sonar.java.source>
+    <sonar.java.target>11</sonar.java.target>
+    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../module-ci/target/site/jacoco/jacoco.xml,${project.basedir}/module-ci/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
   <distributionManagement>
     <repository>
