--- a/plugin/module-main/pom.xml
+++ b/plugin/module-main/pom.xml
@@ -3,7 +3,7 @@
   <groupId>de.intranda.goobi.plugins.quartz</groupId>
   <artifactId>heris-main</artifactId>
   <version>1.0.0</version>
-  <name>Goobi workflow - Plugin Quartz HERIS</name>
+  <name>Plugin Quartz HERIS: Build jar package</name>
   <url>https://github.com/intranda/goobi-plugin-quartz-heris</url>
   <properties>
     <jar.name>plugin_intranda_quartz_heris</jar.name>
