--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,6 +4,8 @@
   <artifactId>heris</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
+  <name>Goobi workflow - Plugin Quartz HERIS</name>
+
   <properties>
     <goobi.version>23.01.2-SNAPSHOT</goobi.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +18,10 @@
     <sonar.java.source>11</sonar.java.source>
     <sonar.java.target>11</sonar.java.target>
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../module-ci/target/site/jacoco/jacoco.xml,${project.basedir}/module-ci/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+    <!-- Tests need to be excluded here, otherwise they would be indexed for analysis
+         in the module-ci AND the parent project and this leads to an error because
+         one file cannot be added twice -->
+    <sonar.test.exclusions>src/test/java/**/*</sonar.test.exclusions>
   </properties>
   <distributionManagement>
     <repository>
