--- a/module-job/pom.xml
+++ b/module-job/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-quartz-heris</artifactId>
-    <version>24.07-SNAPSHOT</version>
+    <version>24.08.1</version>
   </parent>
   <artifactId>plugin-quartz-heris-job</artifactId>
   <packaging>jar</packaging>
