--- a/module-job/pom.xml
+++ b/module-job/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-quartz-heris</artifactId>
-    <version>25.07-SNAPSHOT</version>
+    <version>25.07</version>
   </parent>
   <artifactId>plugin-quartz-heris-job</artifactId>
   <packaging>jar</packaging>
